@@ -6,10 +6,11 @@
   "type": {
     "@id": "http://fdri.ceh.ac.uk/ref/common/sensor-type/hmp155"
   },
+  "measures": [
+    { "@id": "http://fdri.ceh.ac.uk/ref/common/measure/ta-degc-inst" }
+  ],
   "observes": [
-    {
-      "@id": "http://fdri.ceh.ac.uk/id/complex-observable-property/air-temp-inst"
-    }
+      {"@id": "http://fdri.ceh.ac.uk/ref/common/variable/ta"}
   ],
   "serialNumber": "123456",
   "retirementDate": {
